<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/space_lg"
        android:paddingTop="@dimen/space_xl"
        android:paddingBottom="@dimen/space_md"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_menu"
            style="@style/PixelButton"
            android:layout_width="@dimen/icon_button_size"
            android:layout_height="@dimen/icon_button_size"
            android:contentDescription="@string/cd_open_menu"
            android:background="@color/white"
            app:icon="@drawable/ic_menu"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconSize="@dimen/icon_size"
            app:iconTint="@color/pixel_black" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@drawable/bg_rounded_borders">

            <TextView
                style="@style/PixelText.Xs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="20sp"
                android:textColor="@color/pixel_white"
                android:text="@string/header_greeting" />

            <TextView
                style="@style/PixelText.Md"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:textSize="25sp"
                android:textColor="@color/pixel_white"
                android:layout_marginTop="@dimen/space_xs"
                android:text="@string/header_user_name" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="@dimen/icon_button_size"
            android:layout_height="@dimen/icon_button_size">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_notifications"
                style="@style/PixelButton"
                android:layout_width="@dimen/icon_button_size"
                android:layout_height="@dimen/icon_button_size"
                android:contentDescription="@string/cd_notifications"
                android:background="@color/white"
                app:icon="@drawable/ic_bell"
                app:iconGravity="textStart"
                app:iconPadding="0dp"
                app:iconSize="@dimen/icon_size"
                app:iconTint="@color/pixel_black" />

            <View
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:layout_gravity="top|end"
                android:layout_marginTop="@dimen/space_xs"
                android:layout_marginEnd="@dimen/space_xs"
                android:importantForAccessibility="no" />
        </FrameLayout>
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/content_scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/space_xl"
        app:layout_constraintTop_toBottomOf="@id/header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_lg"
                android:orientation="vertical"
                android:paddingStart="@dimen/space_lg"
                android:paddingTop="@dimen/space_lg"
                android:paddingEnd="@dimen/space_xl"
                android:paddingBottom="@dimen/space_xl"
                android:background="@drawable/bg_rounded_borders">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/PixelText.Xs"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="20sp"
                        android:textColor="@color/pixel_white"
                        android:text="@string/balance_label" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_toggle_balance"
                        style="@style/PixelButton"
                        android:layout_width="@dimen/icon_button_small"
                        android:layout_height="@dimen/icon_button_small"
                        android:contentDescription="@string/cd_hide_balance"
                        android:background="@drawable/bg_rounded_borders"
                        app:icon="@drawable/ic_eye"
                        app:iconGravity="textStart"
                        app:iconPadding="0dp"
                        app:iconSize="@dimen/icon_size_sm"
                        app:iconTint="@color/pixel_white" />
                </LinearLayout>

                <TextView
                    android:id="@+id/balance_value"
                    style="@style/PixelText.Balance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:textColor="@color/pixel_white"
                    android:layout_marginTop="@dimen/space_lg"
                    android:text="@string/balance_value" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/pixel_border"
                    android:layout_marginTop="@dimen/space_lg"
                    android:layerType="software" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_md"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/PixelText.Xs"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="17sp"
                        android:textColor="@color/pixel_white"
                        android:text="@string/account_label" />

                    <TextView
                        style="@style/PixelText.Sm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="19sp"
                        android:textColor="@color/pixel_white"
                        android:text="@string/account_value" />
                </LinearLayout>
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_transfer"
                style="@style/PixelButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/primary_button_height"
                android:layout_marginTop="@dimen/space_xl"
                android:layout_marginHorizontal="@dimen/space_lg"
                android:paddingEnd="@dimen/pixel_shadow_offset"
                android:paddingBottom="@dimen/pixel_shadow_offset"
                android:text="@string/action_transfer"
                android:textColor="@color/pixel_white"
                android:textSize="25sp"
                android:background="@drawable/bg_rounded_borders"
                app:icon="@drawable/ic_transfer"
                app:iconGravity="textStart"
                app:iconPadding="@dimen/space_md"
                app:iconSize="@dimen/icon_size"
                app:iconTint="@color/white"
                tools:ignore="RtlSymmetry" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_md"
                android:layout_marginHorizontal="@dimen/space_lg"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/btn_pix"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/action_box_height"
                    android:layout_weight="1"
                    android:layout_marginEnd="@dimen/space_md"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingEnd="@dimen/pixel_shadow_offset_sm"
                    android:paddingBottom="@dimen/pixel_shadow_offset_sm"
                    android:background="@drawable/bg_rounded_borders"
                    tools:ignore="RtlSymmetry,UseCompoundDrawables">

                    <ImageView
                        android:layout_width="@dimen/icon_size_lg"
                        android:layout_height="@dimen/icon_size_lg"
                        android:importantForAccessibility="no"
                        android:src="@drawable/ic_zap"
                        app:tint="@color/pixel_white" />

                    <TextView
                        style="@style/PixelText.Sm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/space_sm"
                        android:textSize="20sp"
                        android:textColor="@color/pixel_white"
                        android:text="@string/action_pix" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btn_virtual_card"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/action_box_height"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingEnd="@dimen/pixel_shadow_offset_sm"
                    android:paddingBottom="@dimen/pixel_shadow_offset_sm"
                    android:background="@drawable/bg_rounded_borders"
                    tools:ignore="RtlSymmetry,UseCompoundDrawables">

                    <ImageView
                        android:layout_width="@dimen/icon_size_lg"
                        android:layout_height="@dimen/icon_size_lg"
                        android:importantForAccessibility="no"
                        android:src="@drawable/ic_credit_card"
                        app:tint="@color/pixel_white" />

                    <TextView
                        style="@style/PixelText.Sm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/space_sm"
                        android:textSize="20sp"
                        android:textColor="@color/pixel_white"
                        android:text="@string/action_virtual_card" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                style="@style/PixelText.Sm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_lg"
                android:layout_marginTop="@dimen/space_xl"
                android:layout_marginBottom="@dimen/space_md"
                android:text="@string/transactions_title"
                android:textSize="20sp"
                android:textColor="@color/black_pure" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/transactions_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_lg"
                android:nestedScrollingEnabled="false"
                android:overScrollMode="never"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="4"
                tools:listitem="@layout/item_transactions" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
