<?xml version="1.0" encoding="utf-8"?>
<!--
  Overlay de confirmacao de exclusao (dialogo pixel).
  Mantido no estilo 8/16-bit em vez de um AlertDialog Material generico.
  A raiz cobre a tela com um veu escuro; a Fragment controla a visibilidade.
-->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B3000000"
    android:clickable="true"
    android:focusable="true">

    <!-- Caixa do dialogo -->
    <LinearLayout
        android:layout_width="@dimen/card_dialog_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/space_lg"
        android:background="@drawable/bg_card_shadow"
        android:orientation="vertical"
        android:paddingStart="@dimen/space_xl"
        android:paddingTop="@dimen/space_xl"
        android:paddingEnd="@dimen/space_xl"
        android:paddingBottom="@dimen/space_xl">

        <TextView
            style="@style/PixelText.Md"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_delete_title" />

        <TextView
            style="@style/BodyText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_md"
            android:lineSpacingMultiplier="1.1"
            android:text="@string/card_delete_desc" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_xl"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_cancel_delete"
                style="@style/PixelButton"
                android:layout_width="0dp"
                android:layout_height="@dimen/dialog_button_height"
                android:layout_weight="1"
                android:background="@drawable/seletor_btn_secondary"
                android:paddingEnd="@dimen/pixel_shadow_offset_sm"
                android:paddingBottom="@dimen/pixel_shadow_offset_sm"
                android:text="@string/card_delete_cancel"
                android:textColor="@color/pixel_white"
                android:textSize="@dimen/text_pixel_xs"
                tools:ignore="RtlSymmetry" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_confirm_delete"
                style="@style/PixelButton"
                android:layout_width="0dp"
                android:layout_height="@dimen/dialog_button_height"
                android:layout_marginStart="@dimen/space_md"
                android:layout_weight="1"
                android:background="@drawable/seletor_btn_secondary"
                android:paddingEnd="@dimen/pixel_shadow_offset_sm"
                android:paddingBottom="@dimen/pixel_shadow_offset_sm"
                android:text="@string/card_delete_confirm"
                android:textColor="@color/pixel_red"
                android:textSize="@dimen/text_pixel_xs"
                app:icon="@drawable/ic_delete"
                app:iconGravity="textStart"
                app:iconPadding="@dimen/space_sm"
                app:iconSize="@dimen/icon_size_sm"
                app:iconTint="@color/pixel_red"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>
