<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottom_nav" />

    <LinearLayout
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/pixel_black"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/pixel_border"
            android:background="@color/pixel_white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/bottom_nav_height"
            android:orientation="horizontal"
            tools:ignore="DisableBaselineAlignment">

            <LinearLayout
                android:id="@+id/nav_home"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/selector_nav_item"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical"
                android:selected="true">

                <ImageView
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:importantForAccessibility="no"
                    android:src="@drawable/ic_home"
                    app:tint="@color/nav_item_content" />

                <TextView
                    style="@style/PixelText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_sm"
                    android:text="@string/nav_home"
                    android:textColor="@color/nav_item_content"
                    android:textSize="@dimen/text_pixel_micro" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/nav_statement"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/selector_nav_item"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:importantForAccessibility="no"
                    android:src="@drawable/ic_receipt"
                    app:tint="@color/nav_item_content" />

                <TextView
                    style="@style/PixelText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_sm"
                    android:text="@string/nav_statement"
                    android:textColor="@color/nav_item_content"
                    android:textSize="@dimen/text_pixel_micro" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/nav_cards"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/selector_nav_item"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:importantForAccessibility="no"
                    android:src="@drawable/ic_credit_card"
                    app:tint="@color/nav_item_content" />

                <TextView
                    style="@style/PixelText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_sm"
                    android:text="@string/nav_cards"
                    android:textColor="@color/nav_item_content"
                    android:textSize="@dimen/text_pixel_micro" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/nav_profile"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/selector_nav_item"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:importantForAccessibility="no"
                    android:src="@drawable/ic_user"
                    app:tint="@color/nav_item_content" />

                <TextView
                    style="@style/PixelText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_sm"
                    android:text="@string/nav_profile"
                    android:textColor="@color/nav_item_content"
                    android:textSize="@dimen/text_pixel_micro" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>